# ascart

./: .gitignore  CMakeLists.txt  consts.inc  functions.asm  macros.inc  main.asm  makefile
.cache/clangd/index/: main.c.55B3B6DFAF9EBFAF.idx
include/: ascii_engine.h  helpers.h  image.h  pgm.h
src/: ascii_engine.c  helpers.c  image.c  main.c  pgm.c
test/: 02.pgm  03.pgm  04.pgm  convert.sh
